# omnicoder_0.1.0

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  env.example.txt  pyproject.toml  pytest.ini  requirements.txt  setup_moe_cuda_ext.py
build_dml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  omnicoder_dml_native.sln  omnicoder_dml_native.vcxproj  omnicoder_dml_native.vcxproj.filters
build_dml/Release/: omnicoder_dml_native.exp  omnicoder_dml_native.lib
build_dml/omnicoder_dml_native.dir/Release/: omnicoder_dml_native.dll.recipe
docker/mobile/: arm64-sandbox.Dockerfile
docs/: Architecture.md  Datasets.md  ExecutionPlan.md  MobileSandbox.md  Quickstart.md  ReasoningProfiles.md
docs/legacy/: EnvKnobs.md  ProjectPlan.md  StateOfTheUnion.md  Teachers.md
examples/: gaussian_splats.jsonl  grpo_prompts.jsonl  math.jsonl  ppo_prompts.jsonl  preferences.jsonl  rm.jsonl  vl_auto.jsonl  vl_fused_sample.jsonl  vqa_fused_sample.jsonl
examples/code_eval/: examples.jsonl
examples/prompts/: agentic_continuous_dev.md  multimodal.txt
examples/sidecars/: README.md  asr_pairs.jsonl  clip_pairs.jsonl  code_tasks.jsonl
profiles/: README.md  acceptance_thresholds.json  coreml_ios.json  datasets.json  iphone15_coreml_ane.json  nnapi_android.json  pixel7_nnapi.json  provider_thresholds.json  teachers.json  windows_dml.json
scripts/: compute_model_size.py
src/omnicoder/: __init__.py  config.py  preset.py
src/omnicoder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/omnicoder/eval/: audio_eval.py  auto_benchmark.py  code_eval.py  image_eval.py  programmatic_rewards.py  reward_metrics.py  teacher_verify.py  text_eval.py  video_eval.py
src/omnicoder/export/: __init__.py  autofetch_backbones.py  awq_gptq_quantize.py  coreml_attention_pass.py  coreml_decode_export.py  coreml_export_videovqdec.py  coreml_export_vqdec.py  diffusion_export.py  executorch_export.py  executorch_export_videovqdec.py  executorch_export_vqdec.py  executorch_quant_maps.py  export_preprocessors.py  gguf_export.py  mel_export.py  mlc_compile.py  mobile_packager.py  onnx_analyze.py  onnx_export.py  onnx_export_grounding.py  onnx_export_latent_heads.py  onnx_export_temporal.py  onnx_export_videovqdec.py  onnx_export_vqdec.py  onnx_fuse.py  onnx_fuse_attention.py  onnx_quantize.py  onnx_quantize_per_op.py  pt_quantize.py
src/omnicoder/inference/: benchmark.py  expert_branch_decode.py  gen_config.py  generate.py  knn_cache.py  memory_estimator.py  mixed_latent_refine.py  multimodal_infer.py  onnx_utils.py  retrieval.py  retrieval_faiss.py  retrieval_memory.py  (+6 more)
src/omnicoder/modeling/kernels/: CMakeLists.txt  _moe_cuda.cpp  _moe_cuda.py  dml_fused_attention.cpp  kv_paged_ops.py  mla_providers.py  moe_cuda_ext.cpp  moe_cuda_ext.cu  moe_scatter.py  moe_scatter_module.py  omnicoder_coreml_op.py  omnicoder_dml_op.py  omnicoder_nnapi_op.py  triton_decode.py
tests/: conftest.py  test_audio_code_roundtrip.py  test_audio_recon_smoke.py  test_auto_bench_error_branches.py  test_bench_acceptance_smoke.py  test_compressive_kv_and_adaptive.py  test_coreml_attention_rope.py  test_cross_modal_verifier_mini_clip.py  test_cross_modal_verifier_onnx_guard.py  test_cumo_upcycle.py  test_datasets_fetch.py  test_diffusion_export_smoke.py  test_distill_multi_teacher.py  test_dml_int4_and_mla_parity.py  test_dml_native_presence.py  test_ds_moe_schedule.py  test_dynamic_cache_export.py  test_dynamic_cache_shim.py  test_env_defaults.py  test_expert_paging.py  test_expert_sharding_launcher.py  test_export_decode_step_smoke.py  test_export_scales_sidecar.py  test_flow_and_audio_metrics_optional.py  test_flow_recon_smoke.py  test_generate_error_branches.py  test_grin_convergence.py  test_grin_gate.py  test_grpo_acceptance_logging.py  test_infer_profiles.py  test_infinite_context.py  test_infinite_context_qa.py  test_int4_layouts.py  test_int4_linear.py  test_int4_matmul.py  test_int4_packer.py  test_int4_provider.py  test_interaction_router.py  test_knn_cache.py  test_kv_budget_enforce.py  (+68 more)
todo/: PI-2025Q3.md  README.md  TODO.md  bugs.md  features.md  labels.md  milestones.md
(+252 files in other folders)
